--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "sequelize": "^6.5.0",
     "simple-git": "^2.22.0",
     "sozlukjs": "^1.1.0",
-    "spotify-web-api-node": "^5.0.0",
-    "sqlite3": "5.0.0",
+    "spotify-web-api-node": "5.0.2",
+    "sqlite3": "5.0.2",
     "translatte": "^3.0.0",
     "wikijs": "^6.0.1",
     "yt-search": "^2.7.4",
