--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cyberqueen-btn-1": "3.9.92",
     "cyberqueen-npm": "3.0.2",
     "queen-natsumi-web-api": "2.0.1",
+    "@blackamda/queenamdi-web-api": "1.0.1",
     "@adiwajshing/baileys": "3.4.1",
     "@lh2020/speedtest-net": "^2.1.1",
     "browser-id3-writer": "^4.4.0",
